--- a/turnier1/templates/turnier1/eingabe.html
+++ b/turnier1/templates/turnier1/eingabe.html
@@ -1,6 +1,7 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+  <meta http-equiv="cache-control" content="no-cache"> 
   <title>Turnier</title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'turnier1/styles_lead.css' %}" />
