--- a/turnier1/templates/turnier1/index.html
+++ b/turnier1/templates/turnier1/index.html
@@ -59,7 +59,8 @@
 
     <h3>Spielpläne:</h3>
     <ul>
-      <li> <a href="/">Online-Ansicht Gesamtspielplan</a><br>
+      <li> <a href="/">Online-Ansicht, aktives Turnier, Gesamtspielplan</a><br>
+      <li> <a href="/turnier/results">Eregebnislisten aller Turniere</a><br>
     </ul> 
     <h3>Ergebniseingabe:</h3>
     <ul>  
