Änderungen für Django 1.7

--- a/turnier1/templates/turnier1/index.html
+++ b/turnier1/templates/turnier1/index.html
@@ -83,5 +83,5 @@
     </ul>
 
   {% endif %}
-  <br><br><font color=gray>© Copyright 2014, Kay Galinsky</font>
+  <br><br><font color=gray>© Copyright 2015, Kay Galinsky (Django 1.7)</font>
 </body>
